Specify comment body width to stop overflow on long strings

--- a/src/app/modules/comments/list/list.component.scss
+++ b/src/app/modules/comments/list/list.component.scss
@@ -444,4 +444,5 @@ m-comments__tree,
 .m-comment--poster .minds-body {
   overflow: visible;
   min-height: 50px;
+  width: 100%;
 }
